--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -60,6 +60,10 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
+          echo ${{ github.ref }}
+          echo ${{ github.ref_name }}
+          echo ${{ runner.os }}
+          echo ${{ matrix.python-version }}
       - name: Upload "partcad"
         if:
           "startsWith(github.ref, 'refs/tags/') &&
