--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -2,9 +2,7 @@ name: CD on Linux, MacOS and Windows
 
 on:
   push:
-    # branches: ["main", "devel"]
-    tags:
-      - "**"
+    branches: ["main", "devel"]
   pull_request:
     branches: ["main", "devel"]
 
@@ -60,80 +58,3 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
-          echo ${{ github.ref }}
-          echo ${{ github.ref_name }}
-          echo ${{ matrix.os }}
-          echo ${{ matrix.python-version }}
-      - name: Upload "partcad"
-        if:
-          "startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-          && matrix.python-version == '3.11'"
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-package-distributions
-          path: partcad/dist/
-      - name: Upload "partcad-cli"
-        if:
-          "startsWith(github.ref, 'refs/tags/') && matrix.os == 'ubuntu-latest'
-          && matrix.python-version == '3.11'"
-        uses: actions/upload-artifact@v3
-        with:
-          name: python-package-distributions
-          path: partcad-cli/dist/
-
-  publish-to-pypi:
-    name: Publish to PyPI
-    if: "startsWith(github.ref, 'refs/tags/')"
-    needs:
-      - build
-    runs-on: ubuntu-latest
-    environment:
-      name: pypi
-      # url: https://pypi.org/p/partcad
-    permissions:
-      id-token: write # IMPORTANT: mandatory for trusted publishing
-
-    steps:
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: "3.11"
-      - name: Download all the dists
-        uses: actions/download-artifact@v3
-        with:
-          name: python-package-distributions
-          path: dist
-      - name: Create GitHub Release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          # The tag must be present on "devel", even if it is present on "main".
-          # Otherwise, such a tag must not be released (changes are injected into "main").
-          if ( git branch -a --contains ${{ github.ref_name }} | grep -q "^  remotes/origin/devel" ); then
-            gh release create '${{ github.ref_name }}' --repo '${{ github.repository }}' --notes "";
-          fi
-
-      - name: Upload artifact signatures to GitHub Release
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          # The tag must be present on "devel", even if it is present on "main".
-          # Otherwise, such a tag must not be released (changes are injected into "main").
-          if ( git branch -a --contains ${{ github.ref_name }} | grep -q "^  remotes/origin/devel" ); then
-            gh release upload '${{ github.ref_name }}' dist/** --repo '${{ github.repository }}';
-          fi
-          if ( git branch -a --contains ${{ github.ref_name }} | grep -q "^  remotes/origin/main" ); then
-            echo "DEPLOY_TO_TEST=FALSE" >> $GITHUB_ENV;
-          else
-            echo "DEPLOY_TO_TEST=TRUE" >> $GITHUB_ENV;
-          fi
-      - name: Publish distribution to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          repository-url:
-            "${{ env.DEPLOY_TO_TEST=='FALSE' && 'https://pypi.org/legacy/' ||
-            'https://test.pypi.org/legacy/' }}"
-          user: __token__
-          password:
-            "${{ env.DEPLOY_TO_TEST=='FALSE' &&  secrets.PYPI_KEY ||
-            secrets.TEST_PYPI_KEY }}"
