--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -14,10 +14,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        # os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        os: ["ubuntu-latest"]
-        # python-version: ["3.9", "3.10", "3.11"]
-        python-version: ["3.11"]
+        os: ["ubuntu-latest", "windows-latest", "macos-latest"]
+        python-version: ["3.9", "3.10", "3.11"]
         exclude:
           - os: "windows-latest"
             python-version: "3.11"
