--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -82,6 +82,9 @@ jobs:
       name: pypi
 
     steps:
+      - uses: actions/checkout@v3
+        with:
+          path: partcad-git
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
@@ -95,24 +98,23 @@ jobs:
       - name: Clone git repo
         if: github.ref == 'refs/heads/main'
         run: |
-          git clone https://github.com/openvmp/partcad
-          cd partcad
-          git checkout main
-          echo "LAST_TAG='$(git describe --abbrev=0)'" >> $GITHUB_ENV
+          cd partcad-git;
+          MERGED_TAG=$(echo '${{ github.event.head_commit.message }}' | tr -d '\n' | sed 's/.* \([0-9]*\.[0-9]*\.[0-9]*\) .*/\1/');
+          echo "$MERGED_TAG" >> $GITHUB_ENV
 
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release create '${{ env.LAST_TAG }}' --repo '${{ github.repository }}' --notes "";
+          gh release create '${{ env.MERGED_TAG }}' --repo '${{ github.repository }}' --notes ""
 
       - name: Upload artifact signatures to GitHub Release
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release upload '${{ env.LAST_TAG }}' dist/** --repo '${{ github.repository }}';
+          gh release upload '${{ env.MERGED_TAG }}' dist/** --repo '${{ github.repository }}'
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
