Changed the branching strategy for the main branch

--- a/.github/workflows/python-deploy.yml
+++ b/.github/workflows/python-deploy.yml
@@ -82,39 +82,24 @@ jobs:
       name: pypi
 
     steps:
-      - uses: actions/checkout@v3
-        with:
-          path: partcad-git
       - name: Set up Python
         uses: actions/setup-python@v3
         with:
           python-version: "3.11"
+
       - name: Download all the dists
         uses: actions/download-artifact@v3
         with:
           name: python-package-distributions
           path: dist
 
-      - name: Clone git repo
-        if: github.ref == 'refs/heads/main'
-        run: |
-          cd partcad-git;
-          MERGED_TAG=$(echo '${{ github.event.head_commit.message }}' | tr -d '\n' | sed 's/.* \([0-9]*\.[0-9]*\.[0-9]*\) .*/\1/');
-          echo "$MERGED_TAG" >> $GITHUB_ENV
-
       - name: Create GitHub Release
         if: github.ref == 'refs/heads/main'
         env:
           GITHUB_TOKEN: ${{ github.token }}
         run: |
-          gh release create '${{ env.MERGED_TAG }}' --repo '${{ github.repository }}' --notes ""
-
-      - name: Upload artifact signatures to GitHub Release
-        if: github.ref == 'refs/heads/main'
-        env:
-          GITHUB_TOKEN: ${{ github.token }}
-        run: |
-          gh release upload '${{ env.MERGED_TAG }}' dist/** --repo '${{ github.repository }}'
+          gh release create '$(git describe --abbrev=0)' --repo '${{ github.repository }}' --notes "";
+          gh release upload '$(git describe --abbrev=0)' dist/** --repo '${{ github.repository }}'
 
       - name: Publish distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
