Added the basic documentation in an attempt to integrate with readthedocs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,7 @@
     ".venv": true,
     ".tox": true,
     "**/.partcad": true,
+    "docs/build": true,
     "partcad*/build": true,
     "partcad*/dist": true
   },
