--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -57,3 +57,7 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
+      - name: Build documentation
+        run: |
+          python -m pip install -r ./requirements.txt
+          sphinx-build  -M html docs/source docs/build -n -W
