--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,3 +9,8 @@ build:
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
   configuration: docs/conf.py
+
+python:
+  install:
+    - package: sphinx_rtd_theme
+    - package: eadthedocs-sphinx-search
