--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,7 +4,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.11"
+    python: "3.12"
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
@@ -13,3 +13,5 @@ sphinx:
 python:
   install:
     - requirements: requirements.txt
+    - method: pip
+      path: sphinx_rtd_theme
