--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,6 @@ isort
 pytest
 pytest-cov
 #tox==4.9.0
-sphinx==5.3.0
-sphinx_rtd_theme==1.1.1
-readthedocs-sphinx-search==0.1.1
+sphinx
+sphinx_rtd_theme
+readthedocs-sphinx-search
