--- a/examples/produce_part_step/partcad.yaml
+++ b/examples/produce_part_step/partcad.yaml
@@ -4,6 +4,14 @@ parts:
     type: step
     desc: M8x30-screw
 render:
+  extra_opts:
+    marginTop: 100
+    marginLeft: 100
+    strokeWidth: 0.5
+    height: 300
+    width: 300
   svg:
+    prefix: ./
+  png:
     prefix: ./
   markdown: README.md
