--- a/.github/workflows/version-bump.yml
+++ b/.github/workflows/version-bump.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install bump-my-version setuptools wheel twine
+          pip install bump-my-version==0.16.2 setuptools wheel twine
 
       - name: Configure git
         run: |
