--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,22 @@
     "partcad*/build": true,
     "partcad*/dist": true
   },
+  "search.exclude": {
+    ".git/**": true,
+    "**/__pycache__": true,
+    "**/*.egg-info": true,
+    "**/.pytest_cache": true,
+    "**/apache20.svg": true,
+    "**/LICENSE.txt": true,
+    ".ocp_vscode": true,
+    ".conda": true,
+    ".venv": true,
+    ".tox": true,
+    "**/.partcad": true,
+    "docs/build": true,
+    "partcad*/build": true,
+    "partcad*/dist": true
+  },
   "markdown.extension.toc.omittedFromToc": {
     "README.md": [
       "# PartCAD"
@@ -40,6 +56,7 @@
   "python.testing.pytestEnabled": true,
   "python.terminal.executeInFileDir": true,
   "python.terminal.launchArgs": [],
+  // TODO(clairbee): "python.analysis.typeCheckingMode": "basic",
   "OcpCadViewer.advanced.autostart": false,
   "yaml.format.bracketSpacing": false // prevent YAML formatter from breaking Jinja2 templates
 }
