Cumulative fixes for parameters. CadQuery parameters work.

--- a/examples/produce_part_cadquery_primitive/partcad.yaml
+++ b/examples/produce_part_cadquery_primitive/partcad.yaml
@@ -3,7 +3,7 @@ parts:
   cube:
     type: cadquery
     desc: This is a cube from examples
-    params:
+    parameters:
       width:
         default: 10.0
       length:
@@ -17,6 +17,15 @@ parts:
       width: 20.0
       length: 10.0
       height: 7.5
+  # TODO(clairbee): add support for the below two
+  #brick2:
+  #  type: enrich
+  #  target: cube:width=20.0,height=20.0
+  #  with:
+  #    length: 10.0
+  #brick_alias:
+  #  type: alias
+  #   target: cube:width=20.0,height=20.0,length=7.5
   cylinder:
     type: cadquery
     path: cylinder.py
