--- a/examples/produce_part_ai_openscad/partcad.yaml
+++ b/examples/produce_part_ai_openscad/partcad.yaml
@@ -1,22 +1,22 @@
 parts:
   cube:
     type: ai-openscad
-    model: gemini-pro
-    prompt: A cube
+    desc: A cube
+    provider: google
     properties:
       length: 10
   prism:
     type: ai-openscad
-    model: gpt-4
-    prompt: A hexagonal prism
+    desc: A hexagonal prism
+    provider: openai
     properties:
       length: 10
   tetrahedron:
     type: ai-openscad
-    model: gpt-4-vision-preview
+    desc: A tetrahedron
+    provider: openai
     tokens: 1200
     top_p: 0.69
-    prompt: A tetrahedron
     properties:
       length: 10
 
