--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -23,17 +23,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
+      - uses: ./.github/actions/setup
       - name: Prepare environments
         run: |
           python -m pip install --upgrade pip build
