--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -24,39 +24,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: install requirements
-        if: matrix.os == 'macos-latest'
-        if: matrix.python-version == '3.10'
-        shell: bash
-        run: |
-          pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp310-cp310-macosx_11_0_arm64.whl
-      - name: install requirements
-        if: matrix.os == 'macos-latest'
-        if: matrix.python-version == '3.11'
-        shell: bash
-        run: |
-          pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl
-      - name: install requirements
-        if: matrix.os == 'macos-latest'
-        if: matrix.python-version == '3.12'
-        shell: bash
-        run: |
-          pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp312-cp312-macosx_11_0_arm64.whl
-      - uses: actions/cache@v3
-        id: cache
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.*') }}
-          restore-keys: |
-            ${{ runner.os }}-pip-
-      - uses: conda-incubator/setup-miniconda@v3
-        with:
-          miniconda-version: latest
-          activate-environment: pc-conda-env
+      - uses: ./.github/actions/setup
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
