--- a/partcad-cli/pyproject.toml
+++ b/partcad-cli/pyproject.toml
@@ -5,7 +5,7 @@ description = "Command-line interface to PartCAD"
 readme = "README.md"
 keywords = ["cadquery", "build123d", "cad", "design", "openscad", "step", "stl"]
 requires-python = ">=3.10"
-license = {file = "LICENSE.txt"}
+license = {file = "../LICENSE.txt"}
 authors = [
   {name = "Roman Kuzmenko", email = "openvmp@proton.me" }
 ]
