--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -1,4 +1,4 @@
-name: 'Setup'
+name: "Setup"
 
 runs:
   using: "composite"
@@ -25,20 +25,17 @@ runs:
 
     # cadquery-ocp hack for MacOS with ARM
     - name: install cadquery-ocp on MacOS (Python 3.10)
-      if: matrix.os == 'macos-latest'
-      if: matrix.python-version == '3.10'
+      if: ${{ (matrix.os == 'macos-latest') and (matrix.python-version == '3.10') }}
       shell: bash
       run: |
         pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp310-cp310-macosx_11_0_arm64.whl
     - name: install cadquery-ocp on MacOS (Python 3.11)
-      if: matrix.os == 'macos-latest'
-      if: matrix.python-version == '3.11'
+      if: ${{ (matrix.os == 'macos-latest') and (matrix.python-version == '3.11') }}
       shell: bash
       run: |
         pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp311-cp311-macosx_11_0_arm64.whl
     - name: install cadquery-ocp on MacOS (Python 3.12)
-      if: matrix.os == 'macos-latest'
-      if: matrix.python-version == '3.12'
+      if: ${{ (matrix.os == 'macos-latest') and (matrix.python-version == '3.12') }}
       shell: bash
       run: |
         pip install https://github.com/jdegenstein/ocp-build-system/releases/download/7.7.2_macos_arm64/cadquery_ocp-7.7.2-cp312-cp312-macosx_11_0_arm64.whl
