--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -23,6 +23,11 @@ runs:
         miniconda-version: latest
         activate-environment: pc-conda-env
 
+    - name: install dev dependencies
+      shell: bash
+      run: |
+        pip install wheel mypy
+
     # cadquery-ocp hack for MacOS with ARM
     - name: install cadquery-ocp on MacOS (Python 3.10)
       if: ${{ (matrix.os == 'macos-latest') && (matrix.python-version == '3.10') }}
