--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -36,10 +36,11 @@ jobs:
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --upgrade pip build && deactivate)
       - name: Test building and packaging
         run: |
+          cp LICENSE.txt apache20.svg partcad
+          cp LICENSE.txt apache20.svg README.md partcad-cli
           (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && cd .. && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/requirements.txt && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist partcad && deactivate)
-          cp README.md partcad-cli
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && cd .. && deactivate)
       - name: Test installation
         run: |
