attempts to fix the github actions

--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -23,10 +23,29 @@ runs:
         miniconda-version: latest
         activate-environment: pc-conda-env
 
+    # Install dev dependencies
     - name: install dev dependencies
       shell: bash
       run: |
         pip install wheel mypy
+    - name: Update Homebrew
+      if: matrix.os == 'macos-latest'
+      run: |
+        brew update --preinstall
+        cat "$(brew --repository)/Library/Taps/homebrew/homebrew-core/Formula/nlopt.rb" > .github/brew-formulae
+    - name: Configure Homebrew cache
+      if: matrix.os == 'macos-latest'
+      uses: actions/cache@v2
+      with:
+        path: |
+          ~/Library/Caches/Homebrew/nlopt--*
+          ~/Library/Caches/Homebrew/downloads/*--nlopt-*
+        key: brew-${{ hashFiles('.github/brew-formulae') }}
+        restore-keys: brew-
+    - name: Install Homebrew dependencies
+      if: matrix.os == 'macos-latest'
+      run: |
+        env HOMEBREW_NO_AUTO_UPDATE=1 brew install nlopt
 
     # cadquery-ocp hack for MacOS with ARM
     - name: install cadquery-ocp on MacOS (Python 3.10)
