--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10", "3.11"]
+        python-version: ["3.10.13", "3.11"]
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
     env:
@@ -35,20 +35,27 @@ jobs:
           python -m venv .venv/install
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --upgrade pip build && deactivate)
       - name: Test building and packaging
+        shell: bash
         run: |
           cp LICENSE.txt apache20.svg partcad
-          cp LICENSE.txt apache20.svg README.md partcad-cli
+          # cp LICENSE.txt partcad
+          # cp apache20.svg partcad
+          cp LICENSE.txt partcad-cli
+          cp apache20.svg partcad-cli
+          cp README.md partcad-cli
           (. .venv/build/${{ env.BIN_DIR }}/activate && cd partcad && python -m build && cd .. && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/requirements.txt && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist partcad && deactivate)
           (. .venv/build-cli/${{ env.BIN_DIR }}/activate && cd partcad-cli && python -m build && cd .. && deactivate)
       - name: Test installation
+        shell: bash
         run: |
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad/requirements.txt     && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad/dist     partcad && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install -r partcad-cli/requirements.txt && deactivate)
           (. .venv/install/${{ env.BIN_DIR }}/activate && python -m pip install --no-index --find-links=partcad-cli/dist partcad-cli && deactivate)
       - name: Build documentation
+        shell: bash
         run: |
           python -m pip install -r ./requirements.txt
           sphinx-build  -M html docs/source docs/build -n -W
