--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -15,7 +15,7 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10.13", "3.11"]
+        python-version: ["3.10.14", "3.11"]
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
     env:
@@ -25,6 +25,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: ./.github/actions/setup
       - name: Prepare environments
+        shell: bash
         run: |
           python -m pip install --upgrade pip build
           mkdir .venv
