--- a/.github/workflows/python-build.yml
+++ b/.github/workflows/python-build.yml
@@ -15,7 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ["3.10.14", "3.11"]
+        # TODO(clairbee): Add pypy versions to the matrix?
+        python-version: ["3.10.14", "3.11.9", "3.12.3"]
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
     env:
