--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -15,10 +15,10 @@ jobs:
       fail-fast: false
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
-        python-version: ["3.10", "3.11"]
-        exclude:
-          - os: "windows-latest"
-            python-version: "3.11"
+        python-version: ["3.10", "3.11", "3.12"]
+        # exclude:
+        #   - os: "windows-latest"
+        #     python-version: "3.11"
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
 
