--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -16,9 +16,12 @@ jobs:
       matrix:
         os: ["ubuntu-latest", "windows-latest", "macos-latest"]
         python-version: ["3.10", "3.11", "3.12"]
-        # exclude:
-        #   - os: "windows-latest"
-        #     python-version: "3.11"
+        exclude:
+          # False negatives on Windows for pytest result evaluation
+          - os: "windows-latest"
+            python-version: "3.11"
+          - os: "windows-latest"
+            python-version: "3.12"
     runs-on: ${{ matrix.os }}
     if: "!startsWith(github.event.head_commit.message, 'Version updated')"
 
